--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Fredoka&display=swap');
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: 'Fredoka', sans-serif;
 }
+button { 
+  all: unset;
+}
+
+button{
+  background-color: #534CEF;
+  color: #fff;
+  font-size: 20px;
+  cursor: pointer;
+
+}
+
